[package]
name = "maelstrom-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
futures = "0.3.31"
rand = "0.9.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_repr = "0.1.19"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
